Stops horizontal scroll with full width banner

--- a/wp-content/themes/twentysixteen-child/style.css
+++ b/wp-content/themes/twentysixteen-child/style.css
@@ -62,6 +62,10 @@ body {
 	margin: 0;
 }
 
+body, html {
+	overflow-x: hidden;
+}
+
 article,
 aside,
 details,
